# rag-mcp

./: .gitignore  README.md  main.py  pyproject.toml
docs/: api-reference.md  architecture.md  mcp-integration.md  user-guide.md
src/markdown_rag/: __init__.py  config.py  database.py  embeddings.py  main.py  mcp.py  models.py  rag.py  rate_limiter.py
src/markdown_rag/initializers/: __init__.py  google.py  ollama.py
