[project]
name = "markdown-rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "langchain>=1.1.0",
    "langchain-google-genai>=3.2.0",
    "langchain-postgres>=0.0.16",
    "langchain-text-splitters>=1.0.0",
    "mcp>=1.22.0",
]
